--- a/.weiji.md
+++ b/.weiji.md
@@ -10,4 +10,6 @@ python scripts/replay_npz.py --registry_name=yochi/wandb-registry-motions/dance1
 python scripts/rsl_rl/train.py --task=Tracking-Flat-G1-v0 \
 --registry_name yochi/wandb-registry-motions/dance1_subject2 \
 --headless --logger wandb --log_project_name BeyondMimic --run_name v0
+
+python scripts/rsl_rl/play.py --task=Tracking-Flat-G1-v0 --num_envs=2 --wandb_path=shisoul/BeyondMimic/cwesrdog
 ```
