--- a/.weiji.md
+++ b/.weiji.md
@@ -5,7 +5,13 @@ https://wandb.ai/yochi
 
 
 python scripts/csv_to_npz.py --input_file '/home/bai/LAFAN1_Retargeting_Dataset/g1/dance1_subject2.csv' --input_fps 30 --output_name dance1_subject2 --headless
+
+
+python scripts/pkl_to_npz.py --input_file '/home/bai/PBHC-Internal/PBHC-Motion/g1robot/long-wushu/Fight.pkl' --input_fps 30 --output_name fight --headless
+
+
 python scripts/replay_npz.py --registry_name=yochi/wandb-registry-motions/dance1_subject2
+python scripts/replay_npz.py --registry_name=yochi/wandb-registry-motions/fight
 
 python scripts/rsl_rl/train.py --task=Tracking-Flat-G1-v0 \
 --registry_name yochi/wandb-registry-motions/dance1_subject2 \
